# wechat-cc

./: .gitignore  README.md  README.zh.md  cli.test.ts  cli.ts  docs.ts  log-viewer.ts  node_modules  package.json  setup.ts  tsconfig.json  vitest.config.ts  vitest.eval-engine.config.ts
.github/: renovate.json
.github/workflows/: ci.yml  desktop.yml  mirror-desktop-tag.yml
apps/desktop/: dev-server.ts  node_modules  package.json  playwright.config.ts  shim.e2e.test.ts  test-shim.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
docs/: architecture.md  plugins.md  registry.example.json
docs/design/: 2026-07-20-social-dogfood-report.md  agent-social-network.md  companion-liveness-layer.md  roadmap.md
docs/ops/: 2026-06-07-reliability-backlog.md
docs/release-notes/: async-discovery.md
docs/releases/: 2026-05-06-v0.5.9.md  2026-05-07-v0.5.13.md  2026-05-08-v0.5.14.md  2026-05-09-v0.5.15.md  2026-06-03-v0.6.1.md  2026-06-04-v0.6.2.md
docs/rfc/: 05-provider-extensibility.md
docs/smoke/: 2026-06-26-real-machine-smoke.md
docs/specs/: 2026-05-07-api-contract-and-agent-session.md  2026-05-08-multi-provider-extension.md  2026-05-21-memory-delete-safety-design.md  2026-05-21-provider-agnostic-cheap-eval.md  2026-06-17-yi-v2-transport-design.md
docs/spike/: 2026-05-08-cursor-sdk.md  (+1 more)
plugins/: .gitignore  README.md
relay/: README.md  mailbox-auth.test.ts  mailbox-auth.ts  mailbox-store.test.ts  mailbox-store.ts  rate-limit.test.ts  rate-limit.ts  server.test.ts  server.ts
scripts/: acceptance-p0p1.ts  smoke-checks.sh  smoke-compiled-sidecar.ts
(+604 files in other folders)
