[package]
name = "wechat_cc_desktop"
version = "0.5.9"
description = "wechat-cc desktop installer"
authors = ["wechat-cc"]
edition = "2021"

[lib]
name = "wechat_cc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
